<resources>
    <string name="app_name">BankRegistrationTest</string>
    <string name="the_few_steps_">First of the few steps to set you up with a Bank Account</string>
    <string name="enter_pan_number">enter pan number</string>
    <string name="pan_number">Pan Number</string>
    <string name="birthdate">BirthDate</string>
    <string name="i_don_t_have_pan">I don\'t have PAN</string>
    <string name="next">Next</string>
    <string name="privacy_read">Providing PAN &amp; Date of Birth us find and fetch your KYC from central registry by the Government of India.<font fgcolor = "#673AB7">Learn more</font></string>
    <string name="image_show_on_display">Image show on display</string>
</resources>